4.8.27.2 dev v2 (#27)
* Updated Table name

* Added test Cases (#23)

* ReadContentState API Added

* Made changes according to review

* Made changes according to review

* Added fields validation

* Added fields validation

* ReadContentState API Added (#17)

* ReadContentState API Added

* Made changes according to review

* Made changes according to review

* Added fields validation

* Added fields validation

* Added contentStateUpdate API

* Made changes according to the review

* changed according to review

* Added contentStateUpdate API (#18)

* ReadContentState API Added

* Made changes according to review

* Made changes according to review

* Added fields validation

* Added fields validation

* Added contentStateUpdate API

* Made changes according to the review

* changed according to review

* Updated the contentUpdate API url

* Updated the contentUpdate API url

* Updated the contentUpdate API url

* Updated the contentStateUpdate API url (#19)

* ReadContentState API Added

* Made changes according to review

* Made changes according to review

* Added fields validation

* Added fields validation

* Added contentStateUpdate API

* Made changes according to the review

* changed according to review

* Updated the contentUpdate API url

* Updated the contentUpdate API url

* Updated the contentUpdate API url

* Modified the API response for contentStateRead API

* Modified contentStateRead API response (#20)

* ReadContentState API Added

* Made changes according to review

* Made changes according to review

* Added fields validation

* Added fields validation

* Added contentStateUpdate API

* Made changes according to the review

* changed according to review

* Updated the contentUpdate API url

* Updated the contentUpdate API url

* Updated the contentUpdate API url

* Modified the API response for contentStateRead API

* Converting completion percentage to decimal

* Converting completion percentage to decimal

* Converting completion percentag